--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lit/index.js",
   "scripts": {
     "build": "node distDeletor.js && tsc",
-    "prebuild":"npm run lint",
+    "prebuild": "npm run lint",
     "lint": "eslint ./src/**/*.ts --fix"
   },
   "repository": {
@@ -31,6 +31,8 @@
   },
   "types": "./lib/index.d.ts",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.7.0"
+    "@types/chai": "^4.3.14",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "chai": "^5.1.0"
   }
 }
