--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
         "rootDir": "./src",
         "outDir": "./lib",
         "allowUnreachableCode": false,
-        "declaration": true
+        "declaration": true,
+        "skipLibCheck": true,
+        "target": "ESNext",
+        "module": "ESNext"
     },
     "exclude": ["./test/**/*.ts"],
     "include": ["./src"]
