--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
   "types": "./lib/index.d.ts",
   "devDependencies": {
     "@types/chai": "^4.3.14",
+    "@types/chalk": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "chai": "^5.1.0"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "log-update": "^6.0.0"
   }
 }
