--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "rootDir": "./src",
-        "outDir": "./lib",
+        "outDir": "bin",
         "allowUnreachableCode": false,
         "declaration": true,
         "skipLibCheck": true,
