--- a/.eslintrc
+++ b/.eslintrc
@@ -12,8 +12,7 @@
         ]
     },
     "plugins": [
-        "@typescript-eslint",
-        "jsdoc"
+        "@typescript-eslint"
     ],
     "rules": {
         "quotes": [
@@ -28,7 +27,6 @@
         "no-constant-condition": "error",
         "@typescript-eslint/require-await": "error",
         "@typescript-eslint/no-useless-constructor": "error",
-        "jsdoc/check-values": "warn",
         "no-func-assign": "warn",
         "sort-imports": "warn",
         "@typescript-eslint/prefer-for-of": "warn",
